Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14286

fallocate() does not zero on-disk data

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.14.0
    • Lustre 2.14.0
    • None
    • 3
    • 9223372036854775807

      The ldiskfs osd_fallocate() does not correctly zero the allocated blocks. This is not noticed during autotest and local developer testing because the underlying storage is zero-filled due to using a sparse backing file and will usually read back as zero. Also, the fsx data correctness test was not properly detecting fallocate() support, and as a result this behavior was not detected until after fsx was fixed.

      fsx uses test_fallocate() to determine if fallocate() along with its various FLAGS is enabled and could be called. This was discovered while working on LU-14160 that test_fallocate() always returned false as a bug. Resulting is fallocate() being skipped always for fsx runs.

            arshad512 Arshad Hussain
            arshad512 Arshad Hussain
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: